--- a/src/App.less
+++ b/src/App.less
@@ -1,3 +1,6 @@
+@app-primary: #0f3460;
+@app-secondary: #e94560;
+
 .App {
   text-align: center;
 }
@@ -25,7 +28,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: @app-secondary;
 }
 
 @keyframes App-logo-spin {
